fix spacing, add backend to get favorited playlists, add 'playing' to global playlist frontend

--- a/static/css/final.css
+++ b/static/css/final.css
@@ -1200,6 +1200,9 @@ i.fa.fa-youtube-play:hover {
   opacity:1;
   transition:300ms;
 }
+.global#QubePlaylist .active .mainImage .overlay{
+  opacity:1;
+}
 .global#QubePlaylist .mainImage .overlay div i{
   color: #aaa;
   transition:300ms;
